# delete_repo

./: CMakeLists.txt  build_debug.bat  build_release.bat  clean.bat  generate_project_files.bat  otsocity.txt
.github/workflows/: cmake-single-platform.yml
Automation/: automation.py  build.bat
Source/: Test.cpp
Source/Game/: Character.cpp  Character.h  Weapon.cpp  Weapon.h
Source/Tests/: main.cpp
Source/Utils/: Math.cpp  Math.h
